# stock_predictions_base

./: .env.example  .gitignore  README.md  ROADMAP.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 82d56a74d5ea_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  alerts.py  auth.py  companies.py  envelope.py  health.py  markets.py  news.py  portfolios.py  predictions.py  research.py  router.py  watchlists.py
backend/app/api/ws/: alerts.py  manager.py  notifications.py  prices.py
backend/app/application/agents/: base.py  schema_types.py
backend/app/application/scoring/: components.py  engine.py  institutional.py
backend/app/application/services/: token_service.py
backend/app/core/: config.py  container.py  errors.py  logging.py  rate_limit.py  request_context.py
backend/app/core/security/: jwt.py  passwords.py
backend/app/domain/alerting/: __init__.py  alert.py  notification.py
backend/app/domain/common/: __init__.py  entity.py  errors.py  events.py  values.py
backend/app/domain/identity/: __init__.py  user.py
backend/app/domain/intelligence/: __init__.py  fundamentals.py  market_context.py  news.py  technicals.py
backend/app/domain/learning/: __init__.py  evaluation.py
backend/app/domain/market/: __init__.py  company.py  market_event.py  price.py
backend/app/domain/portfolio/: __init__.py  portfolio.py  watchlist.py
backend/app/domain/ports/: ai_provider.py  cache.py  market_data_source.py  notifier.py  repositories.py  token_store.py  unit_of_work.py  usage_recorder.py  vector_store.py
backend/app/domain/research/: __init__.py  opportunity.py  prediction.py  reasoning.py  recommendation.py  report.py
backend/app/infrastructure/ai/: registry.py  router.py  usage_log.py
backend/app/infrastructure/auth/: google_oauth.py  in_memory_revocation_store.py  (+1 more)
backend/scripts/: seed_demo.py
(+256 files in other folders)
